# tolossy

./: README.md  index.html  package.json
.github/workflows/: build.yaml
core/: Cargo.toml  README.md
core/src/: common.rs  conversion.rs  main.rs  server.rs  utils.rs
core/src/tests/: conversion_tests.rs  server_tests.rs
src/file-selection/: FileSelection.tsx
ui/: README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json
ui/src/: App.tsx  DisconnectedScreen.tsx  FilePicker.tsx  LoadingScreen.tsx  main.tsx
ui/src/app/: App.tsx  DisconnectedScreen.tsx  LoadingScreen.tsx  MainPage.tsx  SetupNeededScreen.tsx
ui/src/common/: const.ts  core-api.ts  types.ts  useCoreWs.ts
ui/src/components/: ErrorModal.tsx  FilePicker.tsx  PageWrapper.tsx  ScrollableArea.tsx
ui/src/error-modal/: ErrorModal.tsx
ui/src/features/file-processing/: ProcessingList.tsx  useProcessingStore.ts  useProcessingStoreComputed.ts
ui/src/features/file-selection/: FileSelection.tsx  SelectedFilesList.tsx
ui/src/file-selection/: FileSelection.tsx  SelectedFilesList.tsx  useFileSelectionStore.ts
ui/src/hooks/: useCoreWs.ts
ui/src/lib/: core-api.ts  queries.ts  utils.ts
ui/src/processing-list/: ProcessingList.tsx  useProcessingStore.ts
ui/src/types/: app.ts  processing.ts
